tests/invalid/undef_mod_qual.err_exp
undef_mod_qual.m:015: In clause for predicate `main'/2:
undef_mod_qual.m:015:   error: undefined predicate `foo.bletchx'/2.
